# robot_ws

./: README.md
robot_ws/: robot_tree.txt  start_robot.sh
robot_ws/src/auto_explore/: CMakeLists.txt  package.xml
robot_ws/src/auto_explore/config/: lidar_orientation.yaml  mapper_params_online_sync.yaml
robot_ws/src/auto_explore/launch/: auto_explore.launch.py  goto_goal.launch.py  laser_tf.launch.py  slam_online.launch.py
robot_ws/src/auto_explore/rviz/: explore.rviz
robot_ws/src/auto_explore/src/: auto_explorer.cpp  goto_goal.cpp  grid_nav.cpp
robot_ws/src/follow_camera/: package.xml  setup.cfg  setup.py
robot_ws/src/follow_camera/launch/: follow_camera.launch.py
robot_ws/src/motor_interface/: CMakeLists.txt  package.xml
robot_ws/src/motor_interface/launch/: motor_interface.launch.py
robot_ws/src/motor_interface/src/: motor_interface.cpp
robot_ws/src/project_target_nav/: CMakeLists.txt  package.xml
robot_ws/src/project_target_nav/config/: lidar_orientation.yaml
robot_ws/src/project_target_nav/launch/: project_target_nav.launch.py
robot_ws/src/project_target_nav/src/: target_nav_node.cpp
robot_ws/src/ydlidar_ros2_driver/: CMakeLists.txt
robot_ws/src/ydlidar_ros2_driver/launch/: ydlidar_launch.py
robot_ws/src/ydlidar_ros2_driver/params/: ydlidar.yaml
robot_ws/src/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
robot_ws/web_control/: frames_2026-01-12_20.22.33.gv  index.html  mode_manager.py  ros2d.js
robot_ws/web_control/libs/: easeljs.min.js  eventemitter2.min.js  ros2d.js
