<?xml version="1.0"?>
<package format="3">
  <name>auto_explore</name>
  <version>0.0.0</version>
  <description>Auto exploration and go-to-goal navigation</description>

  <maintainer email="cong19102003@todo.todo">cong19102003</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- TF dependencies (bắt buộc!) -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Optional but recommended -->
  <exec_depend>std_msgs</exec_depend>

  <!-- for launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
